# condor3-revive-helper

./: .gitignore  Cargo.toml  LICENSE  README.md  installer.iss
manifests/t/TheGreatCabbage/Condor3ReviveHelper/0.1.0/: TheGreatCabbage.Condor3ReviveHelper.installer.yaml  TheGreatCabbage.Condor3ReviveHelper.locale.en-US.yaml  TheGreatCabbage.Condor3ReviveHelper.yaml
manifests/t/TheGreatCabbage/Condor3ReviveHelper/0.2.0/: TheGreatCabbage.Condor3ReviveHelper.installer.yaml  TheGreatCabbage.Condor3ReviveHelper.locale.en-US.yaml  TheGreatCabbage.Condor3ReviveHelper.yaml
src/: lib.rs
