[package]
name = "condor3-revive-helper"
version = "0.2.1"
edition = "2024"
default-run = "gui"

[dependencies]
indexmap = "2.13.0"
winreg = "0.55"
eframe = "0.33"
chrono = { version = "0.4", optional = true }
windows-service = "0.8"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security_Authorization",
] }

[features]
default = ["logging"]
logging = ["dep:chrono"]

# Define the GUI binary
[[bin]]
name = "gui"
path = "src/bin/revive_helper.rs"

# Define the setup script
[[bin]]
name = "Condor-VR-Configurer"
path = "src/bin/configurer.rs"

# Define the VR launcher
[[bin]]
name = "CondorVR"
path = "src/bin/launcher.rs"

# Define the Windows service
[[bin]]
name = "CondorReviveHelperService"
path = "src/bin/service.rs"

[profile.opt]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
